--- a/src/components/AboutSection.css
+++ b/src/components/AboutSection.css
@@ -4,7 +4,7 @@
 }
 
 .about-container {
-  max-width: 1200px;
+  width: 90%;
   margin: 0 auto;
   padding: 0 2rem;
 }
@@ -21,7 +21,7 @@
   text-align: center;
   color: var(--text-gray);
   font-size: 1.1rem;
-  max-width: 800px;
+  width: 100%;
   margin: 0 auto 3rem;
   line-height: 1.6;
 }
