--- a/src/components/AreaOfFocus.css
+++ b/src/components/AreaOfFocus.css
@@ -84,17 +84,6 @@
   z-index: 999;
 }
 
-/* Popup content */
-/* .popup-content {
-  width: 80%;
-  max-width: 800px;
-  background-color: var(--white);
-  padding: 2rem;
-  border-radius: 20px;
-  position: relative;
-  text-align: center;
-} */
-
 .popup-content {
   width: 400px;
   max-width: 90%;
@@ -170,7 +159,7 @@
   overflow: hidden;
   margin-top: 1rem;
   width: 100%;
-  height: 300px; /* large image height */
+  height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -185,7 +174,7 @@
 }
 
 .popup-scrolling-inner img {
-  width: 100%; /* make image take full popup width */
+  width: 100%;
   height: auto;
   border-radius: 12px;
   flex-shrink: 0;
